# aioli-guestbook-example

./: README.md  pyproject.toml
aioli_guestbook/: __init__.py  config.py  controller.py
aioli_guestbook/service/: visit.py
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/setup/: deploy.rst
example/: aioli.cfg  main.py  pyproject.toml
