[tool.poetry]
name = "guesthouse_backend"
version = "0.0.1"
description = "Awesome Guesthouse backend"
authors = ["Robert Wikman <rbw@vault13.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aioli = "^0.4.0"
aioli-guestbook = "^0.3.0"
aioli-rdbms = "^0.3.0"
aioli-openapi = "^0.2.0"
toml = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
